<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingres_tu_nombre"
        android:textSize="40dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/para_guardar_tu_puntaje_en_el_ranking"
        android:textSize="20dp">
    </TextView>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:id="@+id/editNombre"
        android:text="@string/vacio"
        android:hint="Nombre"
        android:textSize="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bordercolor"
        android:layout_gravity="center"
        android:imeOptions="actionSend"
        android:imeActionId="666"
        android:maxLines="1"
        android:maxLength="10">
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugar"
        style="@style/Botones"
        android:layout_marginTop="50dp"
        android:id="@+id/btnJugar">
    </Button>

</LinearLayout>